[project]
name = "radioactive"
version = "0.1.0"
description = "Discord bot for managing a Minecraft Azure VM"
requires-python = ">=3.11"
dependencies = [
  "aio-mc-rcon>=3.4",
  "azure-identity>=1.12",
  "discord-py>=2.4",
  "httpx>=0.25",
  "python-dotenv>=1.2.2",
]

[project.scripts]
radioactive = "radioactive.main:entry"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.uv]
package = true
